# domain_driven_design

./: .gitignore  Cargo.toml  LICENSE
budget_byte/: Cargo.toml
budget_byte/src/: main.rs
budget_byte/src/core/: domain.rs
budget_byte/src/core/domain/: account.rs  category.rs  tag.rs  transaction.rs
ddd/: Cargo.toml
ddd/src/: lib.rs  macros.rs  structs.rs  traits.rs
ddd/src/enums/: environment.rs
ddd/src/macros/: generate_aggregate.rs
ddd/src/structs/: domain_error.rs  error_detail.rs  events.rs  forbidden_error.rs  ids.rs  invariant_error.rs  role.rs  status_code_error.rs  user_input_error.rs
ddd/src/traits/: aggregate.rs  aggregate_id.rs  aggregate_root_id.rs  domain_event.rs  entity.rs  request.rs  use_case.rs  value_object.rs
ddd_macros/: Cargo.toml
ddd_macros/src/: aggregate.rs  domain_event.rs  entity.rs  generate_fields.rs  lib.rs  request.rs  value_object.rs
kern/: Cargo.toml
kern/src/: application.rs  building_blocks.rs  lib.rs
kern/src/application/: application_event.rs  environment.rs  error.rs  event.rs  ids.rs  request.rs  role.rs  use_case.rs
kern/src/application/error/: forbidden_error.rs
kern/src/building_blocks/: aggregate.rs  domain_event.rs  entity.rs  error.rs  ids.rs  value_object.rs
kern/src/building_blocks/error/: domain_error.rs
kern/src/infrastructure/: error.rs  event.rs
kern/src/infrastructure/error/: axum_extensions.rs
kern/src/infrastructure/event/: event_bus.rs
