[workspace]
members = [
    "ddd",
    "ddd_macros",
]
resolver = "3"

[workspace.dependencies]
# ddd dependencies
async-trait = { version = "0.1.89" }
axum = { version = "0.8.8", features = ["json"] }
chrono = { version = "0.4.44" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
utoipa = { version = "5.4.0", features = ["macros"] }
uuid = { version = "1.17.0", features = ["v4", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }

# ddd dev-dependencies
tokio = { version = "1.50.0", features = ["full"] }

# ddd_macros dependencies
proc-macro2 = "1.0.106"
syn = "2.0.117"
quote = "1.0.45"
