[package]
name = "budget_byte"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
ddd = { path = "../ddd" }
iso_currency = { version = "0.5.1", features = ["iterator"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
uuid = { version = "1.10.0", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }