[package]
name = "ddd"
version = "0.1.0"
edition = "2024"

[lib]
name = "ddd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.41" }
ddd_macros = { version = "0.1.0", path = "../ddd_macros" }
uuid = { version = "1.17.0", features = ["v4", "v7"] }

# [features]
# default = ["derive"]
#
# # Provides `derive` macros.
# derive = ["ddd_macros"]
