[package]
name = "kern"
version = "0.1.0"
edition = "2024"

[lib]
name = "kern"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
axum = { workspace = true, features = ["json"], optional = true }
chrono = { workspace = true, features = ["serde"] } 
dashmap = { workspace = true, optional = true }
ddd_macros = { version = "0.1.0", path = "../ddd_macros" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true , features = ["sync"], optional = true } 
utoipa = { workspace = true, features = ["macros"] }
uuid = { workspace = true, features = ["v4", "v7"] }
validator = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
tokio.workspace = true

[features]
axum = ["dep:axum"]
event_bus = ["dep:dashmap", "dep:tokio"]
validator = ["dep:validator"]
utoipa = []
